# info188-2025-tarea01

./: .~lock.rpg.csv#  Main.hs  Makefile  README.md  haskirpg.cabal  main.hs
src/: Assets.hs  Config.hs  Logic.hs  Maps.hs  Render.hs  Types.hs
