cabal-version:      2.4
name:               haskirpg
version:            0.1.0.0
executable haskirpg
    main-is:          main.hs
    
    -- Estas son las librerías mágicas que necesitamos
    build-depends:    base >=4.13 && < 5
                    , sdl2
                    , sdl2-image
                    , linear
                    , text
                    , containers
                    , mtl
                    , bytestring
    
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N