cabal-version:      2.4
name:               haskirpg
version:            0.1.0.0

executable haskirpg
    main-is:          Main.hs
    
    -- AQUÍ LE DECIMOS QUE MIRE EN LA CARPETA SRC
    hs-source-dirs:   ., src
    
    -- AQUÍ LISTAMOS TUS NUEVOS ARCHIVOS
    other-modules:    Config
                    , Types
                    , Maps
                    , Assets
                    , Logic
                    , Render

    build-depends:    base >= 4.7 && < 5
                    , sdl2
                    , sdl2-image
                    , linear
                    , text
                    , containers
                    , mtl
                    
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N