cabal-version:      2.4
name:               haskirpg
version:            0.1.0.0

executable haskirpg
    main-is:          Main.hs

    hs-source-dirs:   ., src

    -- AQUÃ LISTAMOS TUS NUEVOS ARCHIVOS
    other-modules:    Config
                    , Types
                    , Maps
                    , Assets
                    , Logic
                    , Render

    build-depends:    base >= 4.7 && < 5
                    , sdl2
                    , sdl2-image
                    , sdl2-ttf
                    , sdl2-mixer
                    , linear
                    , text
                    , containers
                    , mtl
                    , random

    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N -O2
